add can message 201 processor

--- a/app/views/dashboard/_pressure.erb
+++ b/app/views/dashboard/_pressure.erb
@@ -1,4 +1,4 @@
 <article>
-    <header>Oil</header>
-    <p><span id="rpm">999</span> <span>PSI</span></p>
+    <header>Engine oil pressure</header>
+    <p><span id="pressure">999</span> <span>PSI</span></p>
 </article>
