--- a/app/views/dashboard/_temp.html.erb
+++ b/app/views/dashboard/_temp.html.erb
@@ -1,4 +1,4 @@
 <article>
-    <header>Temp</header>
+    <header>Engine temp</header>
     <p><span id="temp">999</span> <span>F</span></p>
 </article>
