--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,6 +1,7 @@
 <div role="group" class="c-card">
     <%= render "rpm" %>
     <%= render "speed" %>
+    <%= render "gear" %>
 </div>
 
 <div role="group" class="c-card">
@@ -9,8 +10,8 @@
 </div>
 
 <div role="group" class="c-card">
-    <%= render "wheel_speed", sub_id: 1 %>
-    <%= render "wheel_speed", sub_id: 2 %>
-    <%= render "wheel_speed", sub_id: 3 %>
-    <%= render "wheel_speed", sub_id: 4 %>
+    <%#= render "wheel_speed", sub_id: 1 %>
+    <%#= render "wheel_speed", sub_id: 2 %>
+    <%#= render "wheel_speed", sub_id: 3 %>
+    <%#= render "wheel_speed", sub_id: 4 %>
 </div>
